# socem25

./: .spec  LICENSE  README.md  desktop.ini  idle.ps1  makefile  pyproject.toml  run.bat  run.ps1  run.py  run.sh
.pyinstaller/: desktop.ini  pyinstaller-notes.txt
arduino/: desktop.ini
arduino/CropBerry4_basic/: CropBerry4_basic.ino
arduino/serialConnection_v11/: serialConnection_v11.ino
arduino/serialConnection_v12/: serialConnection_v12.ino
arduino/serialConnection_v8/: serialConnection_v8.ino
clone/: rollout.py  update-desktop-ini-paths.sh  update-desktop-ini.ps1  update-desktop-ini.py
code_examples/: gui_simple.py
config_default/: config_default.toml
docs/: desktop.ini  links.md  socem_software_refactor_design_2025.md  structure.txt
fastAPI/: desktop.ini
gui/: __main__.py  gui_defunct.py  gui_main.py  guiframe_calibrate_loadcell.py  guiframe_error_report.py  guiframe_final_inputs.py  guiframe_guide.py  guiframe_initial_inputs.py  guiframe_record_force.py
inno/: desktop.ini  script-og.iss  script-publiish-setup-Pavlov3D-CLI.iss
legacy/: StemBerry13_bebee.py
matlab-add-on/: README.md  desktop.ini
media/: desktop.ini
media/media-ico/: desktop.ini
projects/: default-project.toml
scripts/: start_api.ps1  start_api.sh  start_gui.ps1  start_gui.sh  start_shell.ps1  start_shell.sh
shell/: __main__.py  shell.py
shell/helpers/: filename_utils.py
shell/history-shell/: shell_history.txt
src/: __main__.py  backup.py  config.py  cursor.py  data.py  desktop.ini  directories.py  ei_Interaction.py  ei_Interaction_error_management.py  ei_no_interaction.py  ei_no_interaction_error_management.py  entity.py  environment.py  environmental.py  gui_defunct.py  gui_main.py  guide.py  guiframe_calibrate_loadcell.py  guiframe_error_report.py  guiframe_final_inputs.py  guiframe_initial_inputs.py  guiframe_record_force.py  helpers.py  main.py  main_funcs.py  pass_in.py  pavlovian_object.py  serial.py  serial_connection.py  socem.py  stemberry.py  userclicks.py
src-copied/: cmd2-table-ex.py  desktop.ini  directories.py  filemanagement.py  generate_UML.py  gui_simple.py  shell.py  toml_utils.py
src-copied/alphanumeric_character_library/: (_svg.html  )_svg.html  0_svg.html  1_svg.html  2_svg.html  3_svg.html  4_svg.html  5_svg.html  6_svg.html  7_svg.html  8_svg.html  9_svg.html  A_svg.html  B_svg.html  C_svg.html  D_svg.html  E_svg.html  F_svg.html  G_svg.html  H_svg.html  I_svg.html  J_svg.html  K_svg.html  L_svg.html  M_svg.html  N_svg.html  O_svg.html  (+27 more)
tests/: __init__.py  __main__.py  desktop.ini  test_core.py  test_toml_utils.py
utils/: desktop.ini  test_explicit_desktop_ini.ps1  test_explicit_desktop_ini.py  update_desktop_ini.ps1  update_desktop_ini.py  update_desktop_ini.sh  update_desktop_ini_config.toml  update_desktop_ini_log.ps1  update_desktop_ini_permission_denied.py
(+151 files in other folders)
