[project]
name = "socem25"
version = "2.0.0"
description = "Clayton takes a stab at modularizing his old SOCEM code.The goals is to create a directory of code, rather than a single file, and to use good coding principles."
authors = [
    {name = "georgeclaytonbennett@gmail.coma"}
]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
